# Time

./: CMakeLists.txt
Src/: Time.h  UTCTime.cpp  main.cpp
inc/: CTime.h  UTCTime.h
